# contract-audit-agent

./: README.md
audit-agent/: .gitignore  Cargo.toml  Shuttle.toml
audit-agent/src/: main.rs  server.rs
audit-agent/src/agents/: ai_agent.rs  chat_agent.rs  deduplication_agent.rs  fixing_agent.rs  mod.rs  multi_agent_system.rs  specialized_auditors.rs
audit-agent/src/config/: config.rs
audit-agent/src/examples/: balance_contract.rs  deposit_withdraw_contract.rs  mod.rs  other_contract.rs
audit-agent/src/models/: mod.rs  report.rs  severity.rs  vulnerability.rs
audit-agent/src/server/: request.rs  response.rs  server.rs
audit-agent/src/vault/: mod.rs  read_vault.rs  write_vault.rs
audit-agent/vault/: README.md  package.json  readReport.js  schema.json  writeReport.js
tools/: api.js  chat.js  fix.js
vault/: index.js  nillionOrgConfig.js  package-lock.json  postSchema.js  schema.json
