[package]
name = "audit-agent"
version = "0.1.0"
edition = "2021"
authors = ["JsMaxi <your.email@example.com>"]
description = "AI agent that audits smart contracts"

[dependencies]
tokio = "1.43.0"
genai = "=0.1.19"
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
validator = { version = "0.20.0", features = ["derive"] }
shuttle-actix-web = "0.52.0"
shuttle-runtime = "0.52.0"
